Fixed User Joining of Races. Setup GApp Stuff.

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ li {
 }
 
 .jumbotron {
+	margin-top: 10px;
 	text-align: center;
 }
 
